Clean up code.